webapp/middleware-replacepath.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-replacepath
  namespace: iterio-test
spec:
  replacePath:
    path: /
