webapp/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
  #apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: error-page-middleware
spec:
  errors:
    status:
      - "404-499"
      - "500-599"
    service:
      name: error-page-service 
      port: 80
    query: "/index.html"
